--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -6,6 +6,6 @@
         <a class="navbar-brand" href="/greeting">Greeting</a>
     </div>
     <div class="container-fluid">
-        <a class="navbar-brand" href="/search_address">Recherche Adresse</a>
+        <a class="navbar-brand" href="/meteo">Météo</a>
     </div>
 </nav>
