--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div th:insert="fragments/navbar.html"></div>
-    <p th:text="'Bonjour ' + ${nomTemplate} + ' !'" />
+    <p th:text="' Hello ' + ${nomTemplate} + ' !'" />
     <div class="container"><br/>
         <div class="alert alert-success">
             <a href="#" class="close" data-dismiss="alert"
