--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-light bg-light">
-    <div class="container-fluid">
+    <div class="container-fluid" style="background-color: #FF5733">
         <a class="navbar-brand" href="/addresses">Addresses</a>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid" style="background-color: #FFC300">
         <a class="navbar-brand" href="/greeting">Greeting</a>
     </div>
 </nav>
