--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <div th:insert="fragments/navbar.html"></div>
+    <br>
     <p th:text="' Hello ' + ${nomTemplate} + ' !'" />
+    <br>
     <div class="container"><br/>
         <div class="alert alert-success">
             <a href="#" class="close" data-dismiss="alert"
                aria-label="close">×</a>
-            <strong>Success!</strong> It is working as we expected.
+            <strong>Success!</strong> Bootstrap fonctionne.
         </div>
     </div>
 </body>
