--- a/src/main/resources/templates/meteo.html
+++ b/src/main/resources/templates/meteo.html
@@ -33,7 +33,8 @@
             <td style="text-align: center;">
                 <div class="container">
                     <p th:text="'Ville: ' + ${city}"></p>
-                    <p th:text="'Type de temps: ' + ${weather}"> <img th:src="${'images/'}"> </p>
+                    <p th:text="'Type de temps: ' + ${weather}"></p>
+                    <img th:src="${'images/' + image}">
                     <p th:text="'Température minimale: ' + ${tmin} + '°C' "></p>
                     <p th:text="'Température maximale: ' + ${tmax} + '°C' "></p>
                     <p th:text="'Taux de probabilité de la pluie: ' + ${probarain} + '%' "></p>
